--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/ui": "^2.1",
         "livewire/livewire": "^1.3",
         "pragmarx/google2fa-laravel": "^1.3",
-        "spatie/laravel-activitylog": "^3.14"
+        "spatie/laravel-activitylog": "^3.14",
+        "unicodeveloper/laravel-password": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
